--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="backg"></canvas>
     <div class='d1'>
       <h1>
-        trasformazione del curriculum in corso.
+        trasformazione del curriculum in corso...
         <br>
       </h1>
     </div>
